# registrar-rs

./: Cargo.toml  README.md
crates/openprovider/: Cargo.toml  README.md
crates/openprovider-cli/: Cargo.toml
crates/openprovider-cli/src/: main.rs
crates/openprovider/src/: lib.rs
crates/porkbun/: Cargo.toml
crates/porkbun/src/: lib.rs
crates/registrar-common/: Cargo.toml
crates/registrar-common/src/: error.rs  json.rs  lib.rs
src/: io_result_ext.rs  json.rs  lib.rs  main.rs
