[package]
name = "openprovider-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openprovider"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
clap = { version = "4.2", features = ["cargo"] }
toml = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
openprovider = { path = "../openprovider" }
tokio = { version = "1", features = ["full"] }
dirs = "5.0.0"

