[package]
name = "openprovider"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "API client for OpenProvider.nl"
homepage = "https://github.com/samvv/openprovider-rs"
repository = "https://github.com/samvv/openprovider-rs"
readme = "README.md"
keywords = [ "api", "http", "dns" ]
categories = [ "web-programming::http-client", "network-programming" ]

[lib]
doctest = false

[dependencies]
log = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
